--- a/Lab 2/Lab2.html
+++ b/Lab 2/Lab2.html
@@ -69,32 +69,48 @@
     <ol>
       <h3>Studio albums</h3>
       <li>The Red</li>
-      <ul>- Released on September 9th, 2015</ul>
+      <ul>- Released on September 9th, 2015
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
       <li>Perfect Velvet</li>
-      <ul>- Released on November 17th,2017</ul>
+      <ul>- Released on November 17th,2017
+        <ul>- Peak chart position: 2</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
 
   <h3>Reissues</h3>
       <li>The Perfect Red Velvet</li>
-      <ul>- Released on January 29, 2018</ul>
+      <ul>- Released on January 29, 2018
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming, SMC</ul>
       <li>The ReVe Festival: Finale</li>
-      <ul>- Released on December 23rd, 2019</ul>
+      <ul>- Released on December 23rd, 2019
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
 
   <h3>Extended Plays</h3>
       <li>Ice Cream Cake</li>
-      <ul>- Released on March 18, 2015</ul>
+      <ul>- Released on March 18, 2015
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
       <li>The Velvet</li>
-      <ul>- Released on March 17th, 2016</ul>
+      <ul>- Released on March 17th, 2016
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
       <li>Russian Roulette</li>
-      <ul>- Released on September 7th, 2016</ul>
+      <ul>- Released on September 7th, 2016
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming</ul>
       <li>Rookie</li>
-      <ul>- Released on February 1st, 2017</ul>
+      <ul>- Released on February 1st, 2017
+        <ul>- Peak chart position: 1</ul>
+      </ul>
       <ul>- Formats: CD, digital download, streaming, SMC</ul>
       <p> And many more!</p>
 
