--- a/Lab4/4b/index.html
+++ b/Lab4/4b/index.html
@@ -13,46 +13,46 @@
     <!-- apple logo -->
     <tr>
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210745/preview" alt="apple logo" title="apple logo 32px" height="32"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 32px" height="32"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210745/preview" alt="apple logo" title="apple logo 64px" height="64"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 64px" height="64"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210745/preview" alt="apple logo" title="apple logo 128px" height="128"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 128px" height="128"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210745/preview" alt="apple logo" title="apple logo 256px" height="256"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 256px" height="256"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210745/preview" alt="apple logo" title="apple logo 512px" height="512"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 512px" height="512"></img>
       </td>
     </tr>
 
     <!-- smiley face -->
     <tr>
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210747/preview" alt="smiley face" title="smiley face 32px" height="32"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 32px" height="32"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210747/preview" alt="smiley face" title="smiley face 64px" height="64"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 64px" height="64"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210747/preview" alt="smiley face" title="smiley face 128px" height="128"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 128px" height="128"></img>
+      </td>
+◊
+      <td>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 256px" height="256"></img>
       </td>
 
       <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210747/preview" alt="smiley face" title="smiley face 256px" height="256"></img>
-      </td>
-
-      <td>
-        <img src="https://canvas.uw.edu/courses/1364030/files/61210747/preview" alt="smiley face" title="smiley face 512px" height="512"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 512px" height="512"></img>
       </td>
     </tr>
 
