lab4b random code fix

--- a/Lab4/4b/index.html
+++ b/Lab4/4b/index.html
@@ -2,9 +2,10 @@
 
 <head>
   <title>Lab4b</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <!-- 32, 64, 128, 256, 512 -->
-<link rel="stylesheet" href="./style.css">
+
 
 <body>
   <h1>SVG Scaling</h1>
@@ -13,46 +14,46 @@
     <!-- apple logo -->
     <tr>
       <td>
-        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 32px" height="32"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 32px" height="32"/>
       </td>
 
       <td>
-        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 64px" height="64"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 64px" height="64"/>
       </td>
 
       <td>
-        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 128px" height="128"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 128px" height="128"/>
       </td>
 
       <td>
-        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 256px" height="256"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 256px" height="256"/>
       </td>
 
       <td>
-        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 512px" height="512"></img>
+        <img src="images/AppleLogo.svg" alt="apple logo" title="apple logo 512px" height="512"/>
       </td>
     </tr>
 
     <!-- smiley face -->
     <tr>
       <td>
-        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 32px" height="32"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 32px" height="32"/>
       </td>
 
       <td>
-        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 64px" height="64"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 64px" height="64"/>
       </td>
 
       <td>
-        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 128px" height="128"></img>
-      </td>
-◊
-      <td>
-        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 256px" height="256"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 128px" height="128"/>
       </td>
 
       <td>
-        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 512px" height="512"></img>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 256px" height="256"/>
+      </td>
+
+      <td>
+        <img src="images/SmileySquare.svg" alt="smiley face" title="smiley face 512px" height="512"/>
       </td>
     </tr>
 
