--- a/Lab5/lab5a/index.html
+++ b/Lab5/lab5a/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Lab5a - mymap</title>
     <link rel="stylesheet" href="./style.css">
+    <meta charset="utf-8">
   </head> 
   <body>
     
