removed lab6 mv

--- a/Lab6/videos.html
+++ b/Lab6/videos.html
@@ -38,7 +38,7 @@
         <source src="videos/psycho-mv-teaser.ogg" type="video/ogg" />
       </video>
       <h3 class="caption">Psycho Music Video Teaser</h3></div>
-<div><video
+      <!--<div><video
         width="640"
         height="440"
         poster="images/psycho-mv-image.jpg"
@@ -48,7 +48,8 @@
         <source src="videos/psycho-mv.webm" type="video/webm" />
         <source src="videos/psycho-mv.ogg" type="video/ogg" />
       </video>
-      <h3 class="caption">Psycho Music Video</h3></div>  
+      <h3 class="caption">Psycho Music Video</h3></div> -->
+ 
       
       
     </div>
