--- a/Lab10/index.html
+++ b/Lab10/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - midterm template</title>
+  <title>Lab 10 - Midterm Template</title>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -18,7 +18,9 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">BIMD233 W2020 Midterm</a>
+    <img src="https://pbs.twimg.com/profile_images/1081593927923322881/ynvB2Jyc.jpg" width="40" height="40"
+    class="d-inline-block align-top" alt="">
+  BIMD233 W2020 Midterm</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">GitHub <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://github.com/friedchickenli/bimd233">GitHub <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Bootstrap</a>
