lab13 ids removed

--- a/Lab13/index.html
+++ b/Lab13/index.html
@@ -21,14 +21,14 @@
     <table class="table table-striped">
       <thead class="thead">
         <tr>
-          <th id="col1">Airline</th>
-          <th id="col2">Number</th>
-          <th id="col3">Origin</th>
-          <th id="col4">Destination</th>
-          <th id="col5">Departure Time</th>
-          <th id="col6">Arrival Time</th>
-          <th id="col7">Arrival Gate</th>
-          <th id="col8">Duration</th>
+          <th>Airline</th>
+          <th>Number</th>
+          <th>Origin</th>
+          <th>Destination</th>
+          <th>Departure Time</th>
+          <th>Arrival Time</th>
+          <th>Arrival Gate</th>
+          <th>Duration</th>
         </tr>
       </thead>
       <tbody id="tableContents">
