--- a/Lab10/index.html
+++ b/Lab10/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="https://pbs.twimg.com/profile_images/1081593927923322881/ynvB2Jyc.jpg" width="40" height="40"
+    <img src="https://i.ya-webdesign.com/images/transparent-hole-white.png" width="40" height="40"
     class="d-inline-block align-top" alt="">
   BIMD233 W2020 Midterm</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
