--- a/Lab16/16a/index.html
+++ b/Lab16/16a/index.html
@@ -25,11 +25,12 @@
       </div>
       <div class="panel-body">
         <h1><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
-        <button id="p1">Player One</button>
-        <button id="p2">Player Two</button>
+        <button id="p1" class="btn btn-default">Player One</button>
+        <button id="p2" class="btn btn-default">Player Two</button>
+        
         <hr>
         <p>Playing to: <span>5</span></p>
-        <input type="number">
+        <input type="number"> 
 
         <button id="reset">Reset</button>
       </div>
