--- a/Lab18/18b/index.html
+++ b/Lab18/18b/index.html
@@ -30,6 +30,8 @@
           <div class="card-body">
             <h3 class="panel-title">jQuery Effects FadeIn</h3>
             <ul id="p2" class="list-group">
+              <button class="btn1">Fade out</button>
+              <button class="btn2">Fade in</button>
               <li class="list-group-item">Effect 1</li>
               <li class="list-group-item">Effect 2</li>
               <li class="list-group-item">Effect 3</li>
@@ -43,6 +45,7 @@
           <div class="card-body">
             <h3 class="panel-title">jQuery Effects FadeTo</h3>
             <ul id="p3" class="list-group">
+              <button class="btn3">Fade To</button>
               <li class="list-group-item">Effect 1</li>
               <li class="list-group-item">Effect 2</li>
               <li class="list-group-item">Effect 3</li>
@@ -56,6 +59,7 @@
           <div class="card-body">
             <h3 class="panel-title">jQuery Effects FadeToggle</h3>
             <ul id="p4" class="list-group">
+              <button class="btn4">Fade Toggle</button>
               <li class="list-group-item">Effect 1</li>
               <li class="list-group-item">Effect 2</li>
               <li class="list-group-item">Effect 3</li>
