update files just because

--- a/Lab3/3c/index.html
+++ b/Lab3/3c/index.html
@@ -5,8 +5,15 @@
 <body> <img src="http://x.pac-12.com/profiles/pac12/themes/pac12_foundation/images/pac12/logo.png" alt="Pac-12 logo" title="Pac-12 Home">
   <h3>Vote for your favorite Football Team</h3>
   <form action="http://courses.washington.edu/bimd233/bimd.php" method="post">
-    <input type="image" src="https://s3.amazonaws.com/static.pac-12.com/images/logos/washington-logo.png" width="30" name="team" value="Washington Huskies">Washington Huskies<br /> 
-    <input type="image" src="https://x.pac-12.com/sites/default/files/styles/thumbnail/public/logo-washington-state-color-2019.png?itok=Kk0dkD9c" width="30"name="team" value="Washington Cougars">Washington Cougars<br /> 
+    <label>
+      <input type="radio" name="team" value="Washington Huskies">
+      <img src="https://s3.amazonaws.com/static.pac-12.com/images/logos/washington-logo.png" width="30" > Washington Huskies<br /> 
+    </label>
+    
+    <label>
+    <input type="radio" name="team" value="Washington Cougars">
+    <img src="https://x.pac-12.com/sites/default/files/styles/thumbnail/public/logo-washington-state-color-2019.png?itok=Kk0dkD9c" width="30">Washington Cougars<br /> 
+  </label>
     <input type="image" src="https://x.pac-12.com/sites/default/files/styles/medium/public/logo-stanford-color-2019.png?itok=zxI_erOF" width="30"name="team" value="Stanford Cardinals">Stanford Cardinals<br /> 
     <input type="image" src="http://s3.amazonaws.com/static.pac-12.com/images/logos/california-logo.png" width="30" name="team" value="California Bears">California Bears<br />
     <input type="image" src="https://ssl.gstatic.com/onebox/media/sports/logos/yRfBxcPyYsr5xQwxK_eryg_48x48.png" width="30" name="team" value="Oregon State">Oregon State Beavers<br />
